############################################################
EFA Version 3.0.1.5 Changes
############################################################

Issue #320  Bug             - /root/.spamassassin inaccessible
Issue #323  Bug             - clamav-unofficial-sigs not running

############################################################
EFA Version 3.0.1.4 Changes
############################################################

Issue #315  Regression      - Regression in Quarantine Reports

############################################################
EFA Version 3.0.1.3 Changes
############################################################

Issue #308  Bug             - ClamAV Status Page blank
Issue #309  Bug             - Anacron daily notifications from mailscanner
Issue #311  Bug             - Quarantine Permissions Issue in 3.0.1.2
Issue #312  Bug             - MailScanner access to EFA-Config denied

Updated clamav, clamd, mysql, and mysql-server

############################################################
EFA Version 3.0.1.2 Changes
############################################################

Issue #92   Bug/Enhancement - Mailwatch Single Recipient Release
Issue #165  Enhancement     - Upgrade MailScanner
Issue #206  Enhancement     - Default Max Archive Depth to Non Zero
Issue #210  Enhancement     - Add EFA Version to GUI
Issue #228  Bug             - Greylist toggle overwrites custom smtpd_recipient_restrictions
Issue #232  Enhancement     - Use CLAMAV-UNOFFICIAL-SIGS maintained by eXtremeSHOK.com
Issue #239  Enhancement     - Add TxRep Config for SA 3.4.1
Issue #265  Enhancement     - Add per user mode for MailWatch
Issue #267  Bug             - SPAM bounce loop
Issue #275  Bug             - MailWatch updater adds duplicate SHOW_GREYLIST definitions
Issue #284  Enhancement     - Lower ImageCerberus Scores by default
Issue #276  Bug             - EFA-Configure Option 11 logic error